--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
   margin: 0;
+  width: 360px;
+  height: 640px;
+  border: 16px rgb(25, 10, 77) solid;
+  border-top-width: 60px;
+  border-bottom-width: 60px;
+  border-radius: 36px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
