--- a/src/styles/CategoriaFood.module.css
+++ b/src/styles/CategoriaFood.module.css
@@ -25,6 +25,7 @@
   align-items: center;
   border-radius: 10px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
@@ -44,6 +45,5 @@
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  margin: 20px;
   width: 100%;
 }
