--- a/src/styles/MainFood.module.css
+++ b/src/styles/MainFood.module.css
@@ -1,6 +1,6 @@
 .foodCardPage {
   align-items: center;
-  background-color: white;
+  background-color: #fdf0d7;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -10,26 +10,26 @@
 .foodCard {
   align-items: center;
   background-color: #fcaf20;
-  border: 4px solid #fcaf20;
+  border: 6px solid #fcaf20;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  height: 180px;
+  height: 140px;
   justify-content: center;
   margin: 10px;
-  padding: 5px;
-  width: 160px;
+  padding: 10px;
+  width: 120px;
 }
 
 .foodCardName {
   color: white;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
 
 }
 
 .foodCardimg {
   border-radius: 10px;
-  height: 100px;
-  width: 150px;
+  height: 80px;
+  width: 100px;
 }
