--- a/src/styles/RecipeDetailsFoods.module.css
+++ b/src/styles/RecipeDetailsFoods.module.css
@@ -64,9 +64,9 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  margin: 10px;
-  margin-top: 10px;
+  justify-content: center;
+  margin-top: 20px;
+  width: 100%;
 }
 
 .ingredientsName {
@@ -94,6 +94,7 @@
 
 .video {
   border-radius: 10px;
+  margin: auto;
 }
 
 .categoria {
