--- a/src/components/header/styles/Header.module.css
+++ b/src/components/header/styles/Header.module.css
@@ -13,3 +13,11 @@
   margin: 5px;
   padding: 4px 4px 1px;
 }
+
+.lupaDisplay {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin: 5px;
+  width: 45vh;
+}
